Actually fixed keyboard layout issue

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -118,7 +118,7 @@ button.MuiButton-contained {
   text-align: center;
 }
 
-@media screen and (max-height: 397px) {
+@media screen and (max-height: 450px) {
   .HomePage-Grid {
     height: 100%;
   }
